test/Fail/LetPair.err
LetPair.agda:17.7-18: error: [ShouldBeRecordPattern]
Expected record pattern
when checking the let binding a , b = p
